Разметка всех страниц

--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,247 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
+<html class="page" lang="ru">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>БЭМ Седона</title>
+</head>
 
-  </body>
+<body class="page__body">
+
+  <header class="main-header">
+    <a class="main-header__logo">
+      <img class="main-header__logo-img" src="" width="185" height="96" alt="Логотип сайта Седона">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"> <span class="visually-hidden">Открыть меню</span></button>
+    </nav>
+    <div class="class=main-nav__wrapper">
+      <ul class="main-nav__list site-list">
+        <li class="site-list__item site-list__item--current">
+          <a href="#">Главная
+          </a>
+        </li>
+        <li class="site-list__item site-list__item--current">
+          <a href="#">Фото и видео
+          </a>
+        </li>
+        <li class="site-list__item site-list__item--current">
+          <a href="#">Форма отзыва
+          </a>
+        </li>
+        <li class="site-list__item site-list__item--current">
+          <a href="#">Html Academy
+          </a>
+        </li>
+      </ul>
+    </div>
+  </header>
+
+  <main class="main-container">
+    <section class="hero">
+      <h1 class="visually-hidden">Сайт городка Седона</h1>
+      <img class="hero__img" src="#" width="458" height="352" alt="Приветствие от Седоны">
+    </section>
+
+    <section class="welcome">
+      <div class="welcome__wrapper">
+        <h2 class="welcome__header">СЕДОНА — небольшой городок в АРИЗОНЕ, заслуживающий большего!</h2>
+        <p class="welcome__text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      </div>
+    </section>
+
+    <section class="advantages">
+      <div class="advantages__wrapper">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            <h3 class="advantages__title">Настоящий городок</h3>
+            <div class="advantages__number">— №1 —</div>
+            <p class="advantages__discription">СЕДОНА не аттракцион для туристов, там течет своя жизнь</p>
+          </li>
+          <li class="advantages__image">
+            <img src="#" width="800" height="385" alt="Домик на фоне гор в Седоне">
+          </li>
+          <li class="advantages__item advantages__item--house">
+            <h3 class="advantages__title">Жилье</h3>
+            <p class="advantages__discription">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </li>
+          <li class="advantages__item advantages__item--food">
+            <h3 class="advantages__title">Еда</h3>
+            <p class="advantages__discription">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
+          </li>
+          <li class="advantages__item advantages__item--souvenirs">
+            <h3 class="advantages__title">Сувениры</h3>
+            <p class="advantages__discription">Не только китайского, но и местного производства!</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Там есть мост дьявола</h3>
+            <div class="advantages__number">— №2 —</div>
+            <p class="advantages__discription">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+          </li>
+          <li class="advantages__image">
+            <img src="#" width="800" height="385" alt="Мост дьявола">
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Небольшая площадь</h3>
+            <div class="advantages__number">— №3 —</div>
+            <p class="advantages__discription">Все интересные места находятся очень близко</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Красивая дорога</h3>
+            <div class="advantages__number">— №4 —</div>
+            <p class="advantages__discription">Ехать в Седону из Лас-Вегаса совсем НЕ СКУЧНО!</p>
+          </li>
+          <li class="advantages__item">
+            <h3 class="advantages__title">Мало туристов</h3>
+            <div class="advantages__number">— №5 —</div>
+            <p class="advantages__discription">Большинство едет в гранд каньон и толпится там</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="promo-block">
+      <div class="promo-block__wrapper">
+        <h2 class="promo-block__header">Заинтересовались</h2>
+        <p class="promo-block__discription">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения
+          гостиниц в седоне</p>
+        <a class="button promo-block__button" href="#">Найти гостиницу</a>
+        <div>
+    </section>
+
+    <section class="map">
+      <div class="map_wrapper">
+
+      </div>
+    </section>
+
+    <section class="form-container">
+      <div class="form-container__wrapper">
+        <h1 class="form-container__header">Оставьте свой отзыв</h1>
+        <p class="form-container__discription">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о
+          посещенных вами достопримечательностях</p>
+      </div>
+      <form class="review-form" action="https://echo.htmlacademy.ru/" method="post">
+        <div class="review-form-section">
+          <div class="review-form__full-name">
+            <p class="review-form__title">Представьтесь:</p>
+            <label class="review-form__label" for="name">Имя<span class="footnote">*</span>:
+              <input class="review-form__name" type="text" placeholder="Пётр" required>
+            </label>
+            <label class="review-form__label" for="name">Фамилия<span class="footnote">*</span>:
+              <input class="review-form__name" type="text" placeholder="Пустота" required>
+            </label>
+            <label class="review-form__label" for="name">Отчество<span class="footnote">*</span>:
+              <input class="review-form__name" type="text" placeholder="Викторович">
+            </label>
+          </div>
+          <div class="review-form__contact-information">
+            <p class="review-form__title">Контактная информация:</p>
+            <label class="review-form__label" for="name">Контактный телефон<span class="footnote">*</span>:
+              <input class="review-form__name" type="tel" placeholder="Введите телефон" required>
+            </label>
+            <label class="review-form__label" for="name">Электронная почта<span class="footnote">*</span>:
+              <input class="review-form__name" type="email" placeholder="Введите e-mail" required>
+            </label>
+          </div>
+
+          <fieldset class="review-form__impression">
+            <legend class="review-form__impression-title">Ваше общее впечатление</legend>
+            <ul class="review-form__impression-list">
+              <li class="review-form__impression-item">
+                <input class="control-input control-input-radio" id="radio-1" type="radio" name="your-impressions"
+                  value="positive" checked>
+                <label class="control" for="radio-1">Скорее положительное</label>
+              </li>
+              <li class="review-form__impression-item">
+                <input class="control-input control-input-radio" id="radio-2" type="radio" name="your-impressions"
+                  value="negative">
+                <label class="control" for="radio-2">Скорее отрицательное</label>
+              </li>
+              <li class="review-form__impression-item">
+                <input class="control-input control-input-radio" id="radio-3" type="radio" name="your-impressions"
+                  value="dont-know">
+                <label class="control" for="radio-3">Затрудняюсь ответить</label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="review-form__attractions">
+            <legend class="review-form__attractions-title">Посещенные достопримечательности:</legend>
+            <ul class="review-form__attractions-list">
+              <li class="review-form__attractions-item">
+                <input class="control-input control-input-check" id="check-1" type="checkbox" name="devils-bridge"
+                  value="positive" checked>
+                <label class="control" for="check-1">Мост Дьявола</label>
+              </li>
+              <li class="review-form__attractions-item">
+                <input class="control-input control-input-check" id="check-2" type="checkbox" name="mountain-bell"
+                  checked>
+                <label class="control" for="check-2">Гора-Колокол</label>
+              </li>
+              <li class="review-form__attractions-item">
+                <input class="control-input control-input-check" id="check-3" type="checkbox" name="slide-park" checked>
+                <label class="control" for="check-3">Слайд-парк</label>
+              </li>
+              <li class="review-form__attractions-item">
+                <input class="control-input control-input-check" id="check-4" type="checkbox" name="red-rocks">
+                <label class="control" for="check-4">Затрудняюсь ответить</label>
+              </li>
+            </ul>
+          </fieldset>
+        </div>
+        <div class="describe-impressions">
+          <p class="describe-impressions__title">Опишите свои эмоции:</p>
+        </div>
+        <div class="describe-impressions__comment">
+          <textarea name="comment" placeholder="Опишите подробно все свои восторги"></textarea>
+        </div>
+        <button class="button button__submit" type="submit">Отправить отзыв</button>
+        <span class="obligatory-field">* — обязательные поля</span>
+      </form>
+      <div class="popup popup_error">
+        <p class="popup__title">Что-то пошло не так!</p>
+        <p class="popup__description">Что-то пошло не так! Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <a class="button popup__button" href="#">Ок</a>
+      </div>
+      <div class="popup popup_success">
+        <p class="popup__title">Ваш отзыв отправлен!</p>
+        <p class="popup__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте.</p>
+        <a class="button popup__button" href="#">Закрыть окно</a>
+      </div>
+    </section>
+
+    <footer class="main-footer">
+      <div class="main-footer__wrapper">
+        <div class="main-footer__contacts contacts">
+          <a class="contacts__hashtag" href="#" <span class="contacts__hashtag-hashtag">#visitsedona</span>
+          </a>
+        </div>
+        <div class="main-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="button social__button" href="#"><span class="visually-hidden">Вконтакте</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="button social__button" href="#"><span class="visually-hidden">Телеграм</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="button social__button" href="#"><span class="visually-hidden">Ютуб</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="main-footer__logo">
+          <a class="academy__logo">
+            <img class="academy__logo-img" src="#" href="#" alt="Логотип Академии">
+          </a>
+        </div>
+      </div>
+    </footer>
+  </main>
+</body>
+
 </html>
