--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -43,7 +43,7 @@
 
         <section class="hero">
             <div class="hero__wrapper">
-                <h1 class="visually-hidden">Сайт городка Седона</h1>
+                <h2 class="visually-hidden">Сайт городка Седона</h2>
                 <img class="hero__img" src="#" width="" height="" alt="Обложка Sedona">
             </div>
         </section>
@@ -51,47 +51,45 @@
         <section class="photo-gallery">
             <div class="photo-gallery__wrapper">
                 <h1 class="photo-gallery__header">Фото и видео</h1>
-                <p class="welcome__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о
+                <p class="photo-gallery__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам
+                    забыть о
                     политике и экономике.</p>
                 <ul class="photo-gallery__list">
                     <li class="photo-gallery__item">
-                        <img class="photo-gallery__images" src="#" width="" height=""
-                            alt="Закат на фоне красивой дороги">
+                        <a class="photo-gallery__link">
+                            <img class="photo-gallery__images" src="#" width="" height=""
+                                alt="Закат на фоне красивой дороги">
+                        </a>
                         <h3 class="photo-gallery__title">Неродные просторы</h3>
                         <p class="photo-gallery__photo-author">Автор фото: Борис</p>
-                        <div class="photo-gallery__like">
-                            <img class="photo-gallery__like-icon" src="#" width="" height="" alt="Лайк">
-                            <p class="photo-gallery__sum-like">1350</p>
-                        </div>
+                        <p class="photo-gallery__sum-like">1350</p>
                     </li>
 
                     <li class="photo-gallery__item">
-                        <img class="photo-gallery__images" src="#" width="" height="" alt="Кактусы на фоне красных гор">
+                        <a class="photo-gallery__link">
+                            <img class="photo-gallery__images" src="#" width="" height=""
+                                alt="Кактусы на фоне красных гор">
+                        </a>
                         <h3 class="photo-gallery__title">Местная растительность</h3>
                         <p class="photo-gallery__photo-author">Автор фото: Сергей</p>
-                        <div class="photo-gallery__like">
-                            <img class="photo-gallery__like-icon" src="#" width="" height="" alt="Лайк">
-                            <p class="photo-gallery__sum-like">143</p>
-                        </div>
+                        <p class="photo-gallery__sum-like">143</p>
                     </li>
                     <li class="photo-gallery__item">
-                        <img class="photo-gallery__images" src="#" width="" height=""
-                            alt="Вид с верху на извилистую дорогу и хвойный лес">
+                        <a class="photo-gallery__link">
+                            <img class="photo-gallery__images" src="#" width="" height=""
+                                alt="Вид с верху на извилистую дорогу и хвойный лес">
+                        </a>
                         <h3 class="photo-gallery__title">Дорога на север</h3>
                         <p class="photo-gallery__photo-author">Автор фото: Петр</p>
-                        <div class="photo-gallery__like">
-                            <img class="photo-gallery__like-icon" src="#" width="" height="" alt="Лайк">
-                            <p class="photo-gallery__sum-like">96</p>
-                        </div>
+                        <p class="photo-gallery__sum-like">96</p>
                     </li>
                     <li class="photo-gallery__item">
-                        <img class="photo-gallery__images" src="#" width="" height="" alt="Мост Дьявола">
+                        <a class="photo-gallery__link">
+                            <img class="photo-gallery__images" src="#" width="" height="" alt="Мост Дьявола">
+                        </a>
                         <h3 class="photo-gallery__title">Мост Дьявола</h3>
                         <p class="photo-gallery__photo-author">Автор фото: Антон</p>
-                        <div class="photo-gallery__like">
-                            <img class="photo-gallery__like-icon" src="#" width="" height="" alt="Лайк">
-                            <p class="photo-gallery__sum-like">254</p>
-                        </div>
+                        <p class="photo-gallery__sum-like">254</p>
                     </li>
                 </ul>
             </div>
@@ -111,9 +109,8 @@
         <footer class="main-footer">
             <div class="main-footer__wrapper">
                 <div class="main-footer__contacts contacts">
-                    <a class="contacts__hashtag" href="#" <span class="contacts__hashtag-hashtag">#visitsedona</span>
-                    </a>
-                </div>
+                    <span class="main-footer__contacts-hashtag">#visitsedona</span>
+                  </div>
                 <div class="main-footer__social social">
                     <ul class="social__list">
                         <li class="social__item">
@@ -131,8 +128,8 @@
                     </ul>
                 </div>
                 <div class="main-footer__logo">
-                    <a class="academy__logo">
-                        <img class="academy__logo-img" src="#" href="#" alt="Логотип Академии">
+                    <a class="main-footer__logo-academy">
+                        <img class="main-footer__logo-academy-img" src="#" href="#" alt="Логотип Академии"><span class="main-footer__logo-academy-text"> Разработано</span>
                     </a>
                 </div>
             </div>
