--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,14 +12,14 @@
 
     <header class="main-header">
         <a class="main-header__logo">
-            <img class="main-header__logo-img" src="" width="185" height="96" alt="Логотип сайта Седона">
+            <img class="main-header__logo-img" src="index.html" width="185" height="96" alt="Логотип сайта Седона">
         </a>
         <nav class="main-nav">
             <button class="main-nav__toggle" type="button"> <span class="visually-hidden">Открыть меню</span></button>
         </nav>
-        <div class="class=main-nav__wrapper">
+        <div class="main-nav__wrapper">
             <ul class="main-nav__list site-list">
-                <li class="site-list__item site-list__item--current">
+                <li class="site-list__item site-list__item">
                     <a href="#">Главная
                     </a>
                 </li>
@@ -27,11 +27,11 @@
                     <a href="#">Фото и видео
                     </a>
                 </li>
-                <li class="site-list__item site-list__item--current">
+                <li class="site-list__item site-list__item">
                     <a href="#">Форма отзыва
                     </a>
                 </li>
-                <li class="site-list__item site-list__item--current">
+                <li class="site-list__item site-list__item">
                     <a href="#">Html Academy
                     </a>
                 </li>
@@ -43,14 +43,14 @@
 
         <section class="hero">
             <div class="hero__wrapper">
-                <h2 class="visually-hidden">Сайт городка Седона</h2>
+                <h1 class="visually-hidden">Сайт городка Седона</h1>
                 <img class="hero__img" src="#" width="" height="" alt="Обложка Sedona">
             </div>
         </section>
 
         <section class="photo-gallery">
             <div class="photo-gallery__wrapper">
-                <h1 class="photo-gallery__header">Фото и видео</h1>
+                <h2 class="photo-gallery__header">Фото и видео</h2>
                 <p class="photo-gallery__text">Не можете решиться на путешествие из-за курса? Фотографии помогут вам
                     забыть о
                     политике и экономике.</p>
