--- a/source/form.html
+++ b/source/form.html
@@ -10,14 +10,14 @@
 
     <header class="main-header">
         <a class="main-header__logo">
-          <img class="main-header__logo-img" src="" width="185" height="96" alt="Логотип сайта Седона">
+          <img class="main-header__logo-img" src="index.html" width="185" height="96" alt="Логотип сайта Седона">
         </a>
         <nav class="main-nav">
           <button class="main-nav__toggle" type="button"> <span class="visually-hidden">Открыть меню</span></button>
         </nav>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--current">
+            <li class="site-list__item site-list__item">
               <a href="#">Главная
               </a>
             </li>
@@ -25,7 +25,7 @@
               <a href="#">Фото и видео
               </a>
             </li>
-            <li class="site-list__item site-list__item">
+            <li class="site-list__item site-list__item--current">
               <a href="#">Форма отзыва
               </a>
             </li>
