--- a/source/index.html
+++ b/source/index.html
@@ -4,43 +4,46 @@
 <head>
   <meta charset="utf-8">
   <title>БЭМ Седона</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
 
   <header class="main-header">
+      <ul class="site-list">
+        <li class="site-list__item site-list__item--current">
+          <a class="site-list__link" href="#">Главная
+          </a>
+        </li>
+        <li class="site-list__item site-list__item">
+          <a class="site-list__link" href="#">Фото и видео
+          </a>
+        </li>
+        <li class="site-list__item site-list__item">
+          <a class="site-list__link" href="#">Форма отзыва
+          </a>
+        </li>
+        <li class="site-list__item site-list__item">
+          <a class="site-list__link" href="#">Html Academy
+          </a>
+        </li>
+      </ul>
     <a class="main-header__logo">
-      <img class="main-header__logo-img" src="" width="185" height="96" alt="Логотип сайта Седона">
+      <img class="main-header__logo-img" src="./img/logo_sedona.svg" width="185" height="96" alt="Логотип сайта Седона">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"> <span class="visually-hidden">Открыть меню</span></button>
     </nav>
-    <div class="main-nav__wrapper">
-      <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--current">
-          <a href="#">Главная
-          </a>
-        </li>
-        <li class="site-list__item site-list__item">
-          <a href="#">Фото и видео
-          </a>
-        </li>
-        <li class="site-list__item site-list__item">
-          <a href="#">Форма отзыва
-          </a>
-        </li>
-        <li class="site-list__item site-list__item">
-          <a href="#">Html Academy
-          </a>
-        </li>
-      </ul>
-    </div>
+
+
+
   </header>
 
   <main class="main-container">
     <section class="hero">
       <h1 class="visually-hidden">Сайт городка Седона</h1>
-      <img class="hero__img" src="#" width="458" height="352" alt="Приветствие от Седоны">
+      <img class="hero__img" src="../images/mobile/text-index.svg.svg" width="282" height="214" alt="Приветствие от Седоны">
     </section>
 
     <section class="welcome">
@@ -54,48 +57,48 @@
       <div class="advantages__wrapper">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages__list">
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item-blue">
             <h3 class="advantages__title">Настоящий городок</h3>
-            <div class="advantages__number">— №1 —</div>
-            <p class="advantages__discription">СЕДОНА не аттракцион для туристов, там течет своя жизнь</p>
+            <div class="advantages__number advantages__number-blue">— №1 —</div>
+            <p class="advantages__discription advantages__discription-blue">СЕДОНА не аттракцион для туристов, там течет своя жизнь</p>
           </li>
           <li class="advantages__image">
-            <img src="#" width="800" height="385" alt="Домик на фоне гор в Седоне">
+            <img src="./img/photo-city.jpg" width="520" height="260" alt="Домик на фоне гор в Седоне">
           </li>
-          <li class="advantages__item advantages__item--house">
+          <li class="advantages__item advantages__item-white advantages__item--house">
             <h3 class="advantages__title">Жилье</h3>
-            <p class="advantages__discription">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            <p class="advantages__discription advantages__discription-white">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
-          <li class="advantages__item advantages__item--food">
+          <li class="advantages__item advantages__item-white advantages__item--food">
             <h3 class="advantages__title">Еда</h3>
-            <p class="advantages__discription">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
+            <p class="advantages__discription advantages__discription-white">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
           </li>
-          <li class="advantages__item advantages__item--souvenirs">
+          <li class="advantages__item advantages__item-white advantages__item--souvenirs">
             <h3 class="advantages__title">Сувениры</h3>
-            <p class="advantages__discription">Не только китайского, но и местного производства!</p>
+            <p class="advantages__discription advantages__discription-white">Не только китайского, но и местного производства!</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item-blue">
             <h3 class="advantages__title">Там есть мост дьявола</h3>
-            <div class="advantages__number">— №2 —</div>
-            <p class="advantages__discription">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            <div class="advantages__number advantages__number-blue">— №2 —</div>
+            <p class="advantages__discription advantages__discription-blue">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </li>
           <li class="advantages__image">
-            <img src="#" width="800" height="385" alt="Мост дьявола">
+            <img src="./img/photo-bridge.jpg" width="520" height="260" alt="Мост дьявола">
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item-grey">
             <h3 class="advantages__title">Небольшая площадь</h3>
             <div class="advantages__number">— №3 —</div>
             <p class="advantages__discription">Все интересные места находятся очень близко</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item-grey">
             <h3 class="advantages__title">Красивая дорога</h3>
             <div class="advantages__number">— №4 —</div>
             <p class="advantages__discription">Ехать в Седону из Лас-Вегаса совсем НЕ СКУЧНО!</p>
           </li>
-          <li class="advantages__item">
+          <li class="advantages__item advantages__item-grey">
             <h3 class="advantages__title">Мало туристов</h3>
             <div class="advantages__number">— №5 —</div>
-            <p class="advantages__discription">Большинство едет в гранд каньон и толпится там</p>
+            <p class="advantages__discription advantages__discription-grey">Большинство едет в гранд каньон и толпится там</p>
           </li>
         </ul>
       </div>
@@ -140,7 +143,7 @@
         </div>
         <div class="main-footer__logo">
           <a class="main-footer__logo-academy">
-            <img class="main-footer__logo-academy-img" src="#" href="#" alt="Логотип Академии"><span
+            <img class="main-footer__logo-academy-img" src="./img/html-logo-footer.svg" href="#" alt="Логотип Академии"><span
               class="main-footer__logo-academy-text"> Разработано</span>
           </a>
         </div>
