--- a/source/index.html
+++ b/source/index.html
@@ -36,8 +36,6 @@
       <button class="main-nav__toggle" type="button"> <span class="visually-hidden">Открыть меню</span></button>
     </nav>
 
-
-
   </header>
 
   <main class="main-container">
@@ -57,27 +55,27 @@
       <div class="advantages__wrapper">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages__list">
-          <li class="advantages__item advantages__item-blue">
+          <li class="advantages__item advantages__item--blue">
             <h3 class="advantages__title">Настоящий городок</h3>
-            <div class="advantages__number advantages__number-blue">— №1 —</div>
-            <p class="advantages__discription advantages__discription-blue">СЕДОНА не аттракцион для туристов, там течет своя жизнь</p>
+            <div class="advantages__number">— №1 —</div>
+            <p class="advantages__discription">СЕДОНА не аттракцион для туристов, там течет своя жизнь</p>
           </li>
           <li class="advantages__image">
             <img src="./img/photo-city.jpg" width="520" height="260" alt="Домик на фоне гор в Седоне">
           </li>
-          <li class="advantages__item advantages__item-white advantages__item--house">
+          <li class="advantages__item advantages__item--white advantages__item--house">
             <h3 class="advantages__title">Жилье</h3>
-            <p class="advantages__discription advantages__discription-white">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            <p class="advantages__discription advantages__discription">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
-          <li class="advantages__item advantages__item-white advantages__item--food">
+          <li class="advantages__item advantages__item--white advantages__item--food">
             <h3 class="advantages__title">Еда</h3>
             <p class="advantages__discription advantages__discription-white">Всегда заказывайте фирменный бургер, Вы не разочаруетесь!</p>
           </li>
-          <li class="advantages__item advantages__item-white advantages__item--souvenirs">
+          <li class="advantages__item advantages__item--white advantages__item--souvenirs">
             <h3 class="advantages__title">Сувениры</h3>
             <p class="advantages__discription advantages__discription-white">Не только китайского, но и местного производства!</p>
           </li>
-          <li class="advantages__item advantages__item-blue">
+          <li class="advantages__item advantages__item--blue">
             <h3 class="advantages__title">Там есть мост дьявола</h3>
             <div class="advantages__number advantages__number-blue">— №2 —</div>
             <p class="advantages__discription advantages__discription-blue">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
@@ -143,7 +141,7 @@
         </div>
         <div class="main-footer__logo">
           <a class="main-footer__logo-academy">
-            <img class="main-footer__logo-academy-img" src="./img/html-logo-footer.svg" href="#" alt="Логотип Академии"><span
+            <img class="main-footer__logo-academy-img" src="./img/logo-footer-academy.svg" href="#" alt="Логотип Академии"><span
               class="main-footer__logo-academy-text"> Разработано</span>
           </a>
         </div>
