--- a/source/catalog.html
+++ b/source/catalog.html
@@ -46,9 +46,9 @@
           <h1 class="visually-hidden">Сайт городка Седона</h1>
           <img
             class="hero__img"
-            src="#"
-            width=""
-            height=""
+            src=""
+            width="902"
+            height="214"
             alt="Обложка Sedona"
           />
         </div>
